# irckaaja

./: .gitignore  .pre-commit-config.yaml  LICENCE.txt  README.md  botscript.py  channel.py  config.ini  config.py  dynamicmodule.py  irckaaja.py  messageparser.py  pyproject.toml  serverconnection.py  setup.py
.github/workflows/: ci.yml  python-publish.yml
IrkkaaNorttienKanssa/: botscript.py  dynamicmodule.py  serverconnection.py
irckaaja/: botscript.py  channel.py  client.py  config.py  connection.py  dynamicmodule.py  irckaaja.py  messageparser.py  protocol.py  server.py  serverconnection.py
irckaaja/scripts/: helloworld.py  imgurannouncer.py  irclinkhistory.py  moduleloader.py  svnannouncer.py  youtubeannouncer.py
irckaaja/tests/: test_parser.py
scripts/: hapotti.py  helloworld.py  imgurannouncer.py  irclinkhistory.py  moduleloader.py  svnannouncer.py  youtubeannouncer.py
scripts/certs/: create_test_certs.sh
tests/: protocol.dump  test_botscript.py  test_channel.py  test_client.py  test_config.py  test_connection.py  test_dynamicmodule.py  test_parser.py
tests/fixtures/: localhost.ca.pem  localhost.crt  localhost.key
trunk/: channel.py  config.ini  irckaaja.py
trunk/scripts/: helloworld.py  moduleloader.py
