[tool.poetry]
name = "irckaaja"
version = "0.1.0"
description = ""
authors = ["Jukka-Pekka Virtanen <virtanen@jukk.is>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
configobj = "*"


[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"
flake8 = "*"
isort = "*"
autoflake = "*"
mypy = "*"
pyupgrade = "*"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
